# text2query

./: .env.example  .gitignore  README.md  __init__.py  cli.py  exceptions.py  populate_db.py  pyproject.toml  requirements.txt  test.py
adapters/nosql/: mongodb.py
adapters/sql/: __init__.py  mysql.py  oracle.py  postgresql.py  sqlite.py  sqlserver.py
core/: t2s.py
core/connections/: __init__.py  base.py  factory.py  mysql.py  postgresql.py  sqlite.py
core/memory/: __init__.py  schema.py  store.py
core/nodes/: human_appoval.py  memory_node.py  orchestrator.py  rag_node.py  state.py  template_node.py  trainer_node.py  wisbiTree.py
core/rag/: schema.py  slot_extractions.py  store.py
core/template_matching/: components_planner.py  models.py  schema.py  slot_extractions.py  store.py  template_repo.py
core/training/: schema.py  store.py
core/utils/templates/: templates.yaml
documentation/: wisbiTree.md
llm/: prompt_builder.py
src/text2query/: __init__.py
src/text2query/adapters/: __init__.py
src/text2query/adapters/nosql/: __init__.py  mongodb.py
src/text2query/adapters/sql/: __init__.py  mysql.py  oracle.py  postgresql.py  sqlite.py  sqlserver.py  trino.py
src/text2query/core/: __init__.py  legacy_core.py  query_composer.py  t2s.py
src/text2query/core/connections/: __init__.py  factory.py  mongodb.py  oracle.py  postgresql.py  sqlserver.py  trino.py
src/text2query/core/memory/: store.py
src/text2query/core/nodes/: __init__.py  executor_node.py  memory_node.py  orchestrator.py  state.py  template_node.py  trainer_node.py  wisbiTree.py
src/text2query/core/template_matching/: composer.py  store.py
src/text2query/core/training/: __init__.py  schema.py  store.py
src/text2query/core/utils/: model_configs.py  models.py
src/text2query/llm/: __init__.py  chart_generator.py  prompt_builder.py
src/text2query/utils/: __init__.py  chart_js.py  json_utils.py
utils/: __init__.py  helpers.py
