[project]
name = "text2query"
version = "0.0.2"
description = "A Python library that converts natural language queries to database queries using LLM"
authors = [
    {name = "_Joe", email = "joelin890120@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["text2query", "sql", "mongodb", "natural-language", "database", "llm", "text-to-sql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "asyncpg>=0.30.0",
    "llama-index-core>=0.10.0",
    "opencc-python-reimplemented",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

# LLM providers
openai = [
    "llama-index-llms-openai>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
]

# Database drivers
mysql = ["aiomysql>=0.2.0", "PyMySQL>=1.1.2"]
mongodb = ["motor>=3.7.1", "pymongo>=4.15.1", "dnspython>=2.8.0"]
oracle = ["oracledb>=2.0.0"]
sqlserver = ["pymssql>=2.2.0", "aioodbc>=0.5.0"]
postgresql-sync = ["psycopg2-binary>=2.9.0"]
mysql-sync = ["mysql-connector-python>=8.0.0"]

# All databases
all-db = [
    "aiomysql>=0.2.0",
    "PyMySQL>=1.1.2",
    "motor>=3.7.1",
    "pymongo>=4.15.1",
    "dnspython>=2.8.0",
    "oracledb>=2.0.0",
    "pymssql>=2.2.0",
    "aioodbc>=0.5.0",
    "psycopg2-binary>=2.9.0",
    "mysql-connector-python>=8.0.0",
]

[project.scripts]
text2query = "text2query.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/text2query"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
